<resources>
    <string name="app_name">MyStore</string>
    <string name="add_cat">Add a category</string>
    <string name="labelName">Name</string>
    <string name="labelImage">Add image</string>
    <string name="labelDescription">Description</string>
    <string name="add">Add</string>
    <string name="required">Required</string>
    <string name="categoryitem_picdescription">Picture of a category</string>
    <string name="fab_description">Add a new category</string>
    <string name="update">Update</string>
    <string name="upd_cat">Update a category</string>
    <string name="editBtnDescription">Edit</string>
    <string name="deleteBtnDescription">Delete</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="labelUname">Username</string>
    <string name="labelLogin">Login</string>
    <string name="labelPassword">Password</string>
    <string name="login_header">Log in to continue</string>
    <string name="labelEmail">Email</string>
    <string name="register_header">Create a new account</string>
    <string name="labelPasswordRepeat">Repeat password</string>
    <string name="labelFirstName">First name</string>
    <string name="labelLastName">Last name</string>
    <string name="labelRegister">Register</string>
    <string name="new_account_prompt">Don\'t have an account?</string>
    <string name="labelNewImage">Update image</string>
    <string name="home">Home</string>
    <string name="create">Create</string>
    <string name="logout">Logout</string>
</resources>